<resources>
    <string name="app_name">Medicine Reminder</string>
    <string name="add_list_item">Add</string>
    <string name="name_medicine">Name medicine</string>
    <string name="date_begin_medicine">Start date medication</string>
    <string name="date_end_medicine">End date medication</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="time_of_day">Time of day</string>
    <string name="amount">Amount of medicines</string>
    <string name="medicines">medicines</string>
    <string name="required_field">This field is required!</string>
    <string name="check_date_begin_end">Date end must be later than date begin</string>
    <string name="pharma">Pharmacists</string>
    <string name="take_amount_medicines_1">You have to take</string>
    <string name="take_amount_medicines_2">medicines.</string>
    <string name="no_internet">No data found! Check your Internet Connection.</string>
    <string name="takenMedicine">Taken</string>
    <string name="back_to_reminders">Back to Reminders</string>
</resources>