<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:useDefaultMargins="true"
    android:alignmentMode="alignBounds"
    android:columnOrderPreserved="false"
    android:columnCount="4"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_of_day" />

    <EditText
        android:id="@+id/editTextTimeReminder"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:ems="10"
        android:onClick="onClickTime"
        android:hint="@string/time_of_day"
        android:inputType="time"
        android:focusable="false"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewAmountMedicines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/editTextAmountMedicines"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="number"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonAddReminder"
        android:layout_width="405dp"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:background="@drawable/button_layout"
        android:text="@string/add_list_item"
        android:textColor="@android:color/white" />
</GridLayout>